Archive2/2b/53f85b3cebad12/output
main.cpp:53:10: error: default initialization of an object of const type 'const volatile A' requires a user-provided default constructor
    A CV a;
         ^
main.cpp:54:10: error: default initialization of an object of const type 'const volatile B' requires a user-provided default constructor
    B CV b;
         ^
2 errors generated.
